--- a/1/index.html
+++ b/1/index.html
@@ -16,18 +16,18 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:1.8s;">
-    <div id="title">yourname.</div><br>
+    <div id="title">uchiha parte 2</div><br>
     <div id="links">
         <a href="#skills">skills</a>
         <a href="#work" style="margin:0px 60px;">works</a>
-        <a href="#contact">contact</a>
+        <a href="#contact">Contactame</a>
     </div>
     </div>
 
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            if you're reading this, that mean's you can read<br>
+            Acá sabemos donde estoy parado<br>
             <button class="btn_one">haha ok</button>
         </div>
     </div>
