--- a/index.html
+++ b/index.html
@@ -57,16 +57,24 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Uchiha publicidad</h4>
-                        <p class="text-muted">Creación de anuncios para tus productos</p>
+                        <h4 class="my-3">Redes sociales</h4>
+                        <p class="text-muted">Manejo de Redes Socialesy creación de anuncios</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Creación de contenido</h4>
+                        <h4 class="my-3">Creación de Contenido</h4>
                         <p class="text-muted">Creamos videos impactantes para mostrar tu empresa en internet</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Creación WEB</h4>
+                        <p class="text-muted">Creamos tu página WEB y tus redes sociales</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -180,6 +188,11 @@
                 </div>
             </div>
         </section>
+
+
+
+
+
         <!-- About-->
         <section class="page-section" id="about">
             <div class="container">
@@ -252,6 +265,9 @@
                 </ul>
             </div>
         </section>
+
+
+
         <!-- Team-->
         <section class="page-section bg-light" id="team">
             <div class="container">
@@ -296,6 +312,8 @@
                 </div>
             </div>
         </section>
+
+
         <!-- Clients-->
         <div class="py-5">
             <div class="container">
@@ -316,6 +334,10 @@
             </div>
         </div>
         <!-- Contact-->
+
+
+
+
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
@@ -367,7 +389,7 @@
                     <!---->
                     <!-- This is what your users will see when there is-->
                     <!-- an error submitting the form-->
-                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                    <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error al enviar el mensaje!</div></div>
                     <!-- Submit Button-->
                     <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
                 </form>
@@ -377,19 +399,40 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Your Website 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Website 2025</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none me-3" >Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" >Terms of Use</a>
                     </div>
                 </div>
             </div>
         </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -570,16 +613,16 @@
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.png" alt="Close modal" /></div>
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">prueba de imagen</h2>
+                                    <p class="item-intro text-muted">prueba de imagen pequeña png</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>legergjregkjerkgjrgjsdkfn venvepf o fepo jefop woprpo rop prowo pe oefpo f fk dkf dpfpdfkdfpkfdpfekpfpkefpfkpdfdkpdppkdepkfepkf kep kep pe kpekf pefpvedfpvk pe kpepfpgfe fe kpgedkp pgkde kpeg kpefped</p>
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Client:</strong>
