--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (latest version) -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-/Vzn/4xY/1Y7fFusUy/2t3Zf8qldURDCWJXvFW8pLhOh0A6Y1X0RGVQ1+XyFlXJg8VRZ/s2WlBBL/x2vW3Uffg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
@@ -501,6 +501,44 @@
                 },
             ];
         </script>
+
+        <script>
+            const contenedor = document.getElementById("modales-portafolio");
+        
+            proyectos.forEach(p => {
+                contenedor.innerHTML += `
+                <div class="portfolio-modal modal fade" id="portfolioModal${p.id}" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="close-modal" data-bs-dismiss="modal">
+                                <img src="assets/img/close-icon.svg" alt="Cerrar modal" />
+                            </div>
+                            <div class="container">
+                                <div class="row justify-content-center">
+                                    <div class="col-lg-8">
+                                        <div class="modal-body">
+                                            <h2 class="text-uppercase">${p.titulo}</h2>
+                                            <p class="item-intro text-muted">${p.intro}</p>
+                                            <img class="img-fluid d-block mx-auto" src="${p.imagen}" alt="..." />
+                                            <p>${p.descripcion}</p>
+                                            <ul class="list-inline">
+                                                <li><strong>Cliente:</strong> ${p.cliente}</li>
+                                                <li><strong>Categoria:</strong> ${p.categoria}</li>
+                                            </ul>
+                                            <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                                <i class="fas fa-xmark me-1"></i>
+                                                Cerrar
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>`;
+            });
+        </script>
+
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
