--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
 
                 <!-- Servicio de drones -->
-            <div class="row text-center">
+            
               <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                   <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -116,18 +116,18 @@
 
             <!-- Cobertura de eventos -->
           <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fas fa-circle fa-stack-2x text-primary"></i>
-              <i class="fas fa-calendar-check fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="my-3">Cobertura de Eventos</h4>
-            <p class="text-muted">Registramos tus eventos corporativos, lanzamientos, activaciones o shows en video y fotografía de alta calidad, listos para redes sociales o promoción interna.</p>
-          </div>
+                <span class="fa-stack fa-4x">
+                  <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                  <i class="fas fa-calendar-check fa-stack-1x fa-inverse"></i>
+                </span>
+                <h4 class="my-3">Cobertura de Eventos</h4>
+                <p class="text-muted">Registramos tus eventos corporativos, lanzamientos, activaciones o shows en video y fotografía de alta calidad, listos para redes sociales o promoción interna.</p>
+             </div>
+         </div>
+        </section>
 
-    </div>
-  </div>
-</section>
 
+        
 
         <!-- Portfolio Grid-->
          <section class="page-section bg-light" id="portfolio">
@@ -338,7 +338,7 @@
       <li class="timeline-inverted">
         <div class="timeline-image">
           <h4>
-            ¡Y està
+            ¡Y esta
             <br />
             Historia
             <br />
@@ -393,7 +393,7 @@
                     </div>
                    </div>
                    <div class="row">
-                   <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
+                   <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Comprometidos con la excelencia, inspirados por la innovación y movidos por la pasión por lo que hacemos.</p></div>
                 </div>
             </div>
         </section>
