--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       </li>
 
       <!-- 2023 - Impresión 3D -->
-      <li class="timeline-inverted">
+      <li>
         <div class="timeline-image">
           <img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="Impresión 3D" />
         </div>
@@ -366,7 +366,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Edwin Gutierrez</h4>
                             <p class="text-muted">CEO</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Edwin Gutierrez Website"><i class="fas fa-globe"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://portfolio-edwinbikes.vercel.app/" target="_blank" aria-label="Edwin Gutierrez Website">
+                                <i class="fas fa-globe"></i>
+                            </a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Edwin Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
