--- a/index.html
+++ b/index.html
@@ -366,11 +366,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Edwin Gutierrez</h4>
                             <p class="text-muted">CEO</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://portfolio-edwinbikes.vercel.app/" target="_blank" aria-label="Edwin Gutierrez Website">
-                                <i class="fas fa-globe"></i>
-                            </a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Edwin Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://portfolio-edwinbikes.vercel.app/" target="_blank" aria-label="Edwin Gutierrez Website"><i class="fas fa-globe"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/edwinbikes/" target="_blank" aria-label="Edwin Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573057135213" target="_blank" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -378,9 +376,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Juan Camilo Espitia</h4>
                             <p class="text-muted">Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Juan Camilo Espitia Website"><i class="fas fa-globe"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Juan Camilo Espitia Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Juan Camilo Espitia WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.juanespitia.com/" aria-label="Juan Camilo Espitia Website"><i class="fas fa-globe"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjuankespitia/" aria-label="Juan Camilo Espitia Instagram"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573165352329" aria-label="Juan Camilo Espitia WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -388,9 +386,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Oscar Gutierrez</h4>
                             <p class="text-muted">Diseñador</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Oscar Gutierrez Website"><i class="fas fa-globe"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Oscar Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Oscar Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://beacons.ai/oskargutierrez" aria-label="Oscar Gutierrez Website"><i class="fas fa-globe"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/oskargut_bikes/" aria-label="Oscar Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573192424396" aria-label="Oscar Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                    </div>
@@ -438,9 +436,20 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; Website 2025</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <!-- TikTok -->
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@visualskyverse" target="_blank" aria-label="TikTok">
+                          <i class="fab fa-tiktok"></i>
+                        </a>
+                        
+                        <!-- Instagram -->
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/visualskyverse" target="_blank" aria-label="Instagram">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                        
+                        <!-- GitHub -->
+                        <a class="btn btn-dark btn-social mx-2" href="https://github.com/edwinbikes" target="_blank" aria-label="GitHub">
+                          <i class="fab fa-github"></i>
+                        </a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" >Privacy Policy</a>
