--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portafolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Historia</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Equipo</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contáctame</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://wa.me/573057135213">Contáctame</a></li>
                     </ul>
                 </div>
             </div>
@@ -368,7 +368,7 @@
                             <p class="text-muted">CEO</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://portfolio-edwinbikes.vercel.app/" target="_blank" aria-label="Edwin Gutierrez Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/edwinbikes/" target="_blank" aria-label="Edwin Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573057135213" target="_blank" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573057135213" target="_blank" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -378,7 +378,7 @@
                             <p class="text-muted">Developer</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.juanespitia.com/" aria-label="Juan Camilo Espitia Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjuankespitia/" aria-label="Juan Camilo Espitia Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573165352329" aria-label="Juan Camilo Espitia WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573165352329" aria-label="Juan Camilo Espitia WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -388,7 +388,7 @@
                             <p class="text-muted">Diseñador</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://beacons.ai/oskargutierrez" aria-label="Oscar Gutierrez Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/oskargut_bikes/" aria-label="Oscar Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="wa.me/573192424396" aria-label="Oscar Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573192424396" aria-label="Oscar Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                    </div>
