--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
                             <h4>Edwin Gutierrez</h4>
-                            <p class="text-muted">CEO</p>
+                            <p class="text-muted">CEO / Piloto de Drone</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://portfolio-edwinbikes.vercel.app/" target="_blank" aria-label="Edwin Gutierrez Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/edwinbikes/" target="_blank" aria-label="Edwin Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573057135213" target="_blank" aria-label="Edwin Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -375,7 +375,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Juan Camilo Espitia</h4>
-                            <p class="text-muted">Developer</p>
+                            <p class="text-muted">Developer / Ing Mec</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.juanespitia.com/" aria-label="Juan Camilo Espitia Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjuankespitia/" aria-label="Juan Camilo Espitia Instagram"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573165352329" aria-label="Juan Camilo Espitia WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -385,7 +385,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
                             <h4>Oscar Gutierrez</h4>
-                            <p class="text-muted">Diseñador</p>
+                            <p class="text-muted">Diseñador / Tatuador</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://beacons.ai/oskargutierrez" aria-label="Oscar Gutierrez Website"><i class="fas fa-globe"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/oskargut_bikes/" aria-label="Oscar Gutierrez Instagram"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://wa.me/573192424396" aria-label="Oscar Gutierrez WhatsApp"><i class="fab fa-whatsapp"></i></a>
