--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="masthead-subheading">Bienvenido a Nuestro Estudio</div>
                 <div class="masthead-heading text-uppercase">Conectamos tu marca</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">!Cotiza Ahora¡</a>
+               <a class="btn btn-primary btn-xl text-uppercase" href="#services">¡Cotiza ahora!</a>
             </div>
         </header>
 
@@ -358,7 +358,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Nuestro Gran Equipo</h2>
-                    <h3 class="section-subheading text-muted">Estamos conformados por un equipo de profesionales implacables y comprometidos en la calidad.</h3>
+                    <h3 class="section-subheading text-muted">Somos un equipo de profesionales comprometidos con la calidad y la excelencia.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -495,8 +495,8 @@
                                             Castor Suspensiones
                                         </li>
                                         <li>
-                                            <strong>Categoria:</strong>
-                                            Automoviles y autopartes
+                                           <strong>Categoría:</strong> 
+                                            Automóviles y autopartes
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -652,7 +652,7 @@
                                       <p class="item-intro text-muted">Imágenes profesionales para marcas, ecommerce y redes</p>
                                       <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="Fotografía de producto" />
                                       <p>
-                                        Producción de fotografía de alta calidad para catálogos, redes sociales y tiendas online. Se enfoca en destacar las texturas, colores y detalles de cada producto con iluminación adecuada, fondos neutros o creativos, y edición profesional. Ideal para marcas que buscan una imagen cuidada y coherente.
+                                        Producción de fotografías de alta calidad para catálogos, redes sociales y tiendas online. Se enfoca en destacar las texturas, colores y detalles de cada producto con iluminación adecuada, fondos neutros o creativos, y edición profesional. Ideal para marcas que buscan una imagen cuidada y coherente.
                                       </p>
                                       <ul class="list-inline">
                                         <li><strong>Tipo:</strong> Fotografía Comercial</li>
